Add initial `tag_files/` (WIP), data `memory/data`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,5 @@ set_property(TARGET hcex PROPERTY C_EXTENSIONS OFF)
 set_property(TARGET hcex PROPERTY CXX_STANDARD 23)
 set_property(TARGET hcex PROPERTY CXX_STANDARD_REQUIRED ON)
 set_property(TARGET hcex PROPERTY CXX_EXTENSIONS OFF)
-target_compile_options(hcex PRIVATE -Wall -Wextra -Wpedantic -pedantic-errors -Wno-missing-braces $<$<CONFIG:DEBUG>:-DDEBUG>)
+target_compile_options(hcex PRIVATE -Wall -Wextra -Wpedantic -pedantic-errors -Wno-missing-braces -Wno-gnu-zero-variadic-macro-arguments $<$<CONFIG:DEBUG>:-DDEBUG>)
 target_include_directories(hcex PRIVATE ${HCEX_INCLUDE_DIRS})
